manifests/geo-distance-deployment.yaml
---
# Service geo-distance
apiVersion: v1
kind: Service
metadata:
  name: geo-distance
  annotations:
    backstage.io/kubernetes-id: backstage-demo-app  
spec:
  selector:
    app: geo-distance
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: frontend
---
# Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: geo-distance
  annotations:
    backstage.io/kubernetes-id: backstage-demo-app  
spec:
  port:
    targetPort: api 
  to:
    kind: Service
    name: geo-distance
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-distance
  annotations:
    backstage.io/kubernetes-id: backstage-demo-app  
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: geo-distance
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: geo-distance
    spec:
      containers:
      - image: geo-distance:0.1
        imagePullPolicy: Always
        name: geo-distance
        ports:
        - containerPort: 8080
          name: frontend
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
